hard-gists/35fb758c18036d7f8640/run.log
=== Docker Run Log for 35fb758c18036d7f8640 ===
Started at: Mi 29. Okt 13:55:12 CET 2025

[2025-10-29 13:55:13] START: Running container for 35fb758c18036d7f8640
[2025-10-29 13:55:13] SUCCESS: Container 185c8fbf2c08161bf0d76c2f7c34b76d9530a102c37e278437849bf9e1c601c7 started for 35fb758c18036d7f8640
=== Container logs for 35fb758c18036d7f8640 ===
  File "/snippet.py", line 37
    print "processing %s" % app_path
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 35fb758c18036d7f8640 ===
[2025-10-29 13:55:15] INFO: Container 185c8fbf2c08161bf0d76c2f7c34b76d9530a102c37e278437849bf9e1c601c7 has stopped
